testing/errors/recursive-macro.a
	!macro recursive @dummy {
		+recursive @dummy
	}
	+recursive 42	; -> "Too deeply nested. Recursive macro calls?"
